--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -21,4 +21,5 @@
 	<string name="delete">supprimer</string>
     <string name="msg_rename_net">Renommer le réseau </string>
     <string name="msg_set_alias_net">Donner un alias au réseau </string>
+    <string name="unable_to_restore">Impossible de restaurer le réseau</string>
 </resources>
