--- a/WBR/src/main/res/values-fr/strings.xml
+++ b/WBR/src/main/res/values-fr/strings.xml
@@ -22,4 +22,9 @@
     <string name="msg_rename_net">Renommer le réseau </string>
     <string name="msg_set_alias_net">Donner un alias au réseau </string>
     <string name="unable_to_restore">Impossible de restaurer le réseau</string>
+    <string name="view_lbl_alias">Alias</string>
+    <string name="view_lbl_ssid">SSID</string>
+    <string name="view_lbl_keymgmt">keymgmt</string>
+    <string name="view_lbl_key">clé</string>
+    <string name="view_restoring">restauration en cours....</string>
 </resources>
