--- a/WBR/src/main/res/values-en/strings.xml
+++ b/WBR/src/main/res/values-en/strings.xml
@@ -21,5 +21,6 @@
 	<string name="delete">delete</string>
     <string name="msg_rename_net">Rename network %1$ :</string>
     <string name="msg_set_alias_net">set an alias to network %1$ :</string>
+    <string name="lbl_restore">Restore</string>
     <string name="view_restoring">restoring</string>
 </resources>
