--- a/WBR/src/main/res/values/strings.xml
+++ b/WBR/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="view_lbl_keymgmt">keymgmt</string>
     <string name="view_lbl_key">clé</string>
     <string name="view_restoring">restauration en cours....</string>
+    <string name="lbl_restore">Restauration</string>
 </resources>
